# pomodoro

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
flatpak/: .gitignore  cargo-sources.json  io.github.eelpigna.Pomodoro.desktop  io.github.eelpigna.Pomodoro.metainfo.xml  io.github.eelpigna.Pomodoro.yml
src/: main.rs
