[package]
name = "pomodoro"
version = "0.1.0"
edition = "2024"
description = "A simple Pomodoro timer"
license = "MIT"
repository = "https://github.com/carlo-pignatiello/iced-pomodoro"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell"]

[workspace.metadata.dist.dependencies.apt]
libdbus-1-dev = "*"
pkg-config = "*"
libwayland-dev = "*"
libxkbcommon-dev = "*"
libegl1-mesa-dev = "*"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
iced_font_awesome = "0.4.2"
